--- a/app/views/users/components/_account-old.html.erb
+++ b/app/views/users/components/_account-old.html.erb
@@ -134,7 +134,7 @@
                 <button type="button" class="btn btn-secondary w-100" onclick="connectWithWallet('trustwallet', 'old')" data-dismiss="modal">TrustWallet</button>
             </div> -->
             <div class="form-group">
-                <button type="button" class="btn btn-secondary w-100" onclick="connectWithWallet('mathwallet', 'old')" data-dismiss="modal">MathWallet</button>
+                <button type="button" class="btn btn-secondary w-100 disabled" data-dismiss="modal">MathWallet</button>
             </div>
           <!--  <div class="form-group">
                 <button type="button" class="btn btn-secondary w-100" onclick="connectWithWallet('tokenpocket', 'old')" data-dismiss="modal">TokenPocket</button>
