--- a/app/views/users/components/_account.html.erb
+++ b/app/views/users/components/_account.html.erb
@@ -144,7 +144,7 @@
                 <button type="button" class="btn btn-secondary w-100" onclick="connectWithWallet('trustwallet', 'profile')" data-dismiss="modal">TrustWallet</button>
             </div> -->
             <div class="form-group">
-                <button type="button" class="btn btn-secondary w-100" onclick="connectWithWallet('mathwallet', 'profile')" data-dismiss="modal">MathWallet</button>
+                <button type="button" class="btn btn-secondary w-100 disabled"" data-dismiss="modal">MathWallet</button>
             </div>
           <!--  <div class="form-group">
                 <button type="button" class="btn btn-secondary w-100" onclick="connectWithWallet('tokenpocket', 'profile')" data-dismiss="modal">TokenPocket</button>
